--- a/src/components/CompactGrid.module.scss
+++ b/src/components/CompactGrid.module.scss
@@ -31,7 +31,7 @@
   @media (max-width: p.$bp-mobile) {
     grid-template-columns: repeat(auto-fill, minmax(var(--grid-min-col-compact-mobile), 1fr));
     padding: 0 var(--page-gutter-mobile) var(--space-4) var(--page-gutter-mobile);
-    gap: var(--space-3) var(--space-2);
+    gap: calc(var(--space-2) + var(--space-1));
 
     section:last-child & {
       padding-bottom: var(--space-grid-bottom);
