--- a/src/components/Controls.module.scss
+++ b/src/components/Controls.module.scss
@@ -682,7 +682,6 @@
   @media (max-width: p.$bp-mobile) {
     width: var(--control-height-mobile);
     padding: 0;
-    border-radius: var(--radius-column);
   }
 }
 
